# glhf

./: makefile  meson.build
.cache/clangd/index/: IndexBuffer.cpp.828C5EFB5BF1F1FF.idx  IndexBuffer.hpp.1441312686E5BB4D.idx  Renderer.cpp.6BA48BA190B848A3.idx  Renderer.hpp.5DEFEFAD32627D10.idx  Shader.cpp.0EEDEE8792312A7B.idx  Shader.hpp.60D00B48F933681F.idx  Test.cpp.24AF540E0FA2B965.idx  Test.h.1A32D7DAD989F597.idx  TestClearColor.cpp.0B3CDFF8344D9E6A.idx  TestClearColor.hpp.2071876DB8630588.idx  TestTexture.cpp.AD5A2BB629550E5D.idx  TestTexture.hpp.36EEA58EBDEBF02A.idx  Texture.cpp.C2E15B4A8BC994AE.idx  Texture.hpp.9B9509C2BBBEA70D.idx  VertexArray.cpp.422CE62F963CCAC3.idx  VertexArray.hpp.C3FAE9924E844132.idx  VertexBuffer.cpp.5E50295194EC5C02.idx  VertexBuffer.hpp.D2F94E7E7480BEDD.idx  VertexBufferLayout.hpp.AD52FD081FE29142.idx  _fixes.hpp.1BAD632E3C6541F8.idx  _vectorize.hpp.FB9F0E7BE9DBFF1C.idx  common.hpp.3BBEB24C8DCF3F89.idx  compute_common.hpp.F833D435AF3B2164.idx  compute_vector_relational.hpp.8B8C688CCA64EDE5.idx  constants.hpp.9F1FD97A1669E204.idx  constants.inl.A17A7A52F9EBAF30.idx  exponential.hpp.73BC8C0067B6F021.idx  func_common.inl.B015FAE0834307A7.idx  func_exponential.inl.8C2AA86C1850F0E0.idx  func_geometric.inl.6A617676F91E435C.idx  func_integer.inl.C716B3F65E063D6D.idx  func_matrix.inl.7AE8403B9DF57890.idx  func_packing.inl.524A3C3996406754.idx  func_trigonometric.inl.AA25DF6B2D9EFFC0.idx  func_vector_relational.inl.45C51B4C740F9477.idx  (+142 more)
glhf/: Renderer.cpp  Renderer.hpp  imgui.ini  main.cpp
glhf.xcodeproj/: project.pbxproj
glhf/src/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  main.cpp
res/shaders/: basic.shader
src/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexBuffer.cpp  main.cpp
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.hpp  TestTexture.cpp  TestTexture.hpp
(+8 files in other folders)
